--- a/home.html
+++ b/home.html
@@ -109,8 +109,8 @@
                                   <div class="card primary-color">
                                     <a href="src/Projeto - Bootstrap/home.html"><img src="src/iMove.JPG" class="img-thumbnail" role='button' alt="foto-site-iMove"></a>
                                     <div class="card-body">
-                                      <h5 class="card-title secondary-color">iMove</h5>
-                                      <p class="card-text secondary-color">Site demostrativo para afins educativos. <br>Tecnologias Usadas:<br><br>-HTML<br>-CSS<br>-BOOSTRAP</p>
+                                      <h5 class="card-title secondary-color"><strong>iMove</strong></h5>
+                                      <p class="card-text secondary-color">Site demostrativo para afins educativos. <br>Tecnologias Usadas:<br><br> <strong>HTML|CSS|BOOSTRAP</strong></p>
                                     </div>
                                   </div>
                                 </div>
@@ -140,10 +140,10 @@
                             <div class="row row-cols-1 row-cols-md-3 g-4" data-bs-parent="#mesma">
                                 <div class="col-12">
                                   <div class="card h-100 primary-color">
-                                    <img src="src/coming-soon.jpg" class="img-thumbnail" role='button' alt="img-em-breve">
+                                    <a href="src/Game-Velha/index.html"><img src="src/GameVelha.JPG" class="img-thumbnail" role='button' alt="foto-site-iMove"></a>
                                     <div class="card-body">
-                                      <h5 class="card-title secondary-color">Em Construção</h5>
-                                      <p class="card-text secondary-color">Em breve terá mais jogos demostrativos.</p>
+                                      <h5 class="card-title secondary-color"><strong>Jogo da Velha</strong></h5>
+                                      <p class="card-text secondary-color">Jogo demostrativo para afins educativos. <br>Tecnologias Usadas:<br><br> <strong>HTML|CSS|BOOSTRAP|JAVASCRIPT</strong></p>
                                     </div>
                                   </div>
                                 </div>
